# cocksearcher

./: manage.py  pyproject.toml
cocksearcher/: asgi.py  base_query.py  exceptions.py  openapi_types.py  serializers.py  settings.py  urls.py  wsgi.py
cocksearcher/domain/: cocktail.py  cocktail_repository.py
cocksearcher/domain/repositories/: cocktail.py
cocksearcher/infrastructures/: cocktail_db.py
cocksearcher/infrastructures/cockdb/: cockdb.py  cocktail.py
cocksearcher/infrastructures/dto/: cocktail_db.py
cocksearcher/infrastructures/elasticsearch/: cocktail.py  elasticsearch.py
cocksearcher/services/: cocktail_list.py
cocksearcher/views/v1/: cocktail_detail.py  cocktail_list.py  cocktail_list_refresh.py  cocktail_prefer.py  today_cocktail.py  urls.py
cocksearcher/views/v1/requests/: base_query.py
cocksearcher/views/v1/schemas/: __init__.py  params.py  today_cocktail.py
cocksearcher/views/v1/serializers/: cocktail_detail.py  cocktail_list.py  cocktail_prefer.py  ingredient_detail.py  today_cocktail.py
cocktail/: serializers.py  urls.py  views.py
config/: services.py  settings.py  urls.py
docs/: openapi3.yaml
list/: classification.py  params.py  serializers.py  urls.py  views.py
tests/: test_cocksearcher.py
today/: params.py  serializers.py  urls.py  views.py
